--- a/index.html
+++ b/index.html
@@ -66,7 +66,15 @@
         </div>
     
         <div class="popup" id="popup-edu-box">
-            <p>I am pursuing an MS in Financial Engineering at the University of Southern California. Previously, I studied at the London School of Economics and UC Riverside, where I earned a BA in Economics. I also hold an AA-T in Economics and an AS-T in Film, Television, and Electronic Media from Pasadena City College. And if we’re counting everything, I attended preschool at USC—so really, it’s all come full circle.</p>
+            <p>
+                - MS in Financial Engineering, University of Southern California (2025-)<br>
+                - BA in Economics, University of California, Riverside & The London School of Economics (2024)<br>
+                - AA-T in Economics, Pasadena City College (2021)<br>
+                - AS-T in Film, Television, and Electronic Media, Pasadena City College (2021)
+            </p>
+            <p>
+                And if we’re counting everything, I attended preschool at USC—so really, it’s all come full circle.
+            </p>
             <label for="popup-reset" class="close-button">close</label>
         </div>
         <p class="personal-text">This is my personal website where I share my work.</p>
