--- a/index.html
+++ b/index.html
@@ -66,12 +66,9 @@
         </div>
     
         <div class="popup" id="popup-edu-box">
-            <p>
-                - MS in Financial Engineering, University of Southern California (2025-)<br>
-                - BA in Economics, University of California, Riverside & The London School of Economics (2024)<br>
-                - AA-T in Economics, Pasadena City College (2021)<br>
-                - AS-T in Film, Television, and Electronic Media, Pasadena City College (2021)
-            </p>
+            <p>MS in Financial Engineering (2025-)<br> University of Southern California</p>
+            <p>BA in Economics(2024)<br> University of California, Riverside<br> The London School of Economics</p>
+            <p>AA-T in Economics, Pasadena City College (2021)<br> AS-T in Film, Television, and Electronic Media (2021)<br>  Pasadena City College</p>
             <p>
                 And if we’re counting everything, I attended preschool at USC—so really, it’s all come full circle.
             </p>
