--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
         </div>
     
         <div class="popup" id="popup-edu-box">
-            <p>MS in Financial Engineering (2025-)<br> University of Southern California</p>
-            <p>BA in Economics(2024)<br> University of California, Riverside<br> The London School of Economics</p>
-            <p>AA-T in Economics, Pasadena City College (2021)<br> AS-T in Film, Television, and Electronic Media (2021)<br>  Pasadena City College</p>
+            <p>Financial Engineering, M.S. (2025-)<br> University of Southern California</p>
+            <p>Economics, B.A. (2024)<br> University of California, Riverside<br> The London School of Economics</p>
+            <p>Economics, A.A.-T (2021)<br>Film, TV, and Electronic Media, A.S.-T (2021)<br>  Pasadena City College</p>
             <p>
                 And if we’re counting everything, I attended preschool at USC—so really, it’s all come full circle.
             </p>
