--- a/index.html
+++ b/index.html
@@ -66,12 +66,14 @@
         </div>
     
         <div class="popup" id="popup-edu-box">
-            <p>Financial Engineering, M.S. (2025-)<br> University of Southern California</p>
-            <p>Economics, B.A. (2024)<br> University of California, Riverside<br> The London School of Economics</p>
-            <p>Economics, A.A.-T (2021)<br>Film, TV, and Electronic Media, A.S.-T (2021)<br>  Pasadena City College</p>
-            <p>
-                And if we’re counting everything, I attended preschool at USC—so really, it’s all come full circle.
-            </p>
+            <p><strong>Financial Engineering, M.S.</strong> (2025–)<br> <em>University of Southern California</em></p>
+
+            <p><strong>Economics, B.A.</strong> (2024)<br> <em>University of California, Riverside</em><br> <em>The London School of Economics</em></p>
+
+            <p><strong>Economics, A.A.-T</strong> (2021)<br><strong>Film, TV, and Electronic Media, A.S.-T</strong> (2021)<br> <em>Pasadena City College</em></p>
+
+            <p>...and if we’re counting everything, I also attended preschool at <em>USC</em>—so really, it’s all come full circle.</p>
+
             <label for="popup-reset" class="close-button">close</label>
         </div>
         <p class="personal-text">This is my personal website where I share my work.</p>
