--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
             <p><strong>Economics, B.A.</strong> (2024)<br> <em>University of California, Riverside</em><br> <em>The London School of Economics</em></p>
 
-            <p><strong>Economics, A.A.-T</strong> (2021)<br><strong>Film, TV, and Digital Media, A.S.-T</strong> (2021)<br> <em>Pasadena City College</em></p>
+            <p><strong>Economics, A.A.-T</strong> (2021)<br><strong>Film Production, A.S.-T</strong> (2021)<br> <em>Pasadena City College</em></p>
 
             <p>...and if we’re counting everything, I also attended preschool at <em>USC</em>—so really, it’s all come full circle.</p>
 
