--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
     
         <div class="popup" id="popup-usc-box">
-            <p>Stay (M.S.)<em>FINE</em> and <strong>Fight On</strong>! :D</p>
+            <p>Stay (M.S.)<em>FINE</em> and <strong>Fight On</strong>! :)</p>
             <label for="popup-reset" class="close-button">close</label>
         </div>
     
