--- a/films.html
+++ b/films.html
@@ -6,6 +6,7 @@
     <title>Films | Arian Nazarian</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<script src="main-site.js" defer></script>
 <body>
     <header>
         <img src="assets/images/no-admittance.png" alt="No Admittance Except on Party Business" class="header-image">
