--- a/photos.html
+++ b/photos.html
@@ -6,6 +6,7 @@
     <title>Photos | Arian Nazarian</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<script src="main-site.js" defer></script>
 <body>
     <header>
         <img src="assets/images/no-admittance.png" alt="No Admittance Except on Party Business" class="header-image">
@@ -18,6 +19,5 @@
     <main>
         <p class="category-quote">"It's the job that's never started as takes longest to finish."<br>- J.R.R. Tolkien, <em>The Lord of the Rings</em></p>
     </main>
-    <script src="time-travel.js"></script>
 </body>
 </html>
