--- a/films.html
+++ b/films.html
@@ -9,7 +9,12 @@
 <script src="main-site.js" defer></script>
 <body>
     <header>
-        <img src="assets/images/no-admittance.png" alt="No Admittance Except on Party Business" class="header-image">
+        <picture id="header-image" role="button" aria-label="Toggle header image">
+            <source id="header-source" srcset="assets/images/no-admittance.webp" type="image/webp">
+            <img id="header-img" src="assets/images/no-admittance.png" 
+                 alt="No Admittance Except on Party Business" 
+                 class="header-image" loading="lazy" tabindex="0">
+        </picture>
         <nav>
             <a href="index.html"><span class="back-arrow">&lt;</span> Films</a>
         </nav>
