Updated files and fixed typos

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
             <p><strong>Economics, A.A.-T</strong> (2021)<br><strong>Film Production, A.S.-T</strong> (2021)<br> <em>Pasadena City College</em></p>
 
-            <p>...and if we’re counting everything, I also attended preschool at <em>USC</em>—so really, it’s all come full circle.</p>
+            <p>...and if we’re counting everything, I also attended preschool at USC—so really, it’s all come full circle.</p>
 
             <label for="popup-reset" class="close-button">close</label>
         </div>
