Reformat links to personal and work pages

--- a/personal.html
+++ b/personal.html
@@ -16,7 +16,7 @@
                  class="header-image" loading="lazy" tabindex="0">
         </picture>
         <nav>
-            <a href="index.html"><span class="back-arrow">&lt;</span> Photos</a>
+            <a href="index.html"><span class="back-arrow">&lt;</span> personal</a>
         </nav>
     </header>
     
