--- a/work.html
+++ b/work.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <script src="main-site.js" defer></script>
+<script src="time-travel.js"></script>
 <body>
     <header>
         <picture id="header-image" role="button" aria-label="Toggle header image">
@@ -16,7 +17,7 @@
                  class="header-image" loading="lazy" tabindex="0">
         </picture>
         <nav>
-            <a href="index.html"><span class="back-arrow">&lt;</span> Papers</a>
+            <a href="index.html"><span class="back-arrow">&lt;</span> work</a>
         </nav>
     </header>
     
@@ -24,6 +25,5 @@
     <main>
         <p class="category-quote">"It's the job that's never started as takes longest to finish."<br>- J.R.R. Tolkien, <em>The Lord of the Rings</em></p>
     </main>
-    <script src="time-travel.js"></script>
 </body>
 </html>
