Reformat links to personal and work pages

--- a/work.html
+++ b/work.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Papers | Arian Nazarian</title>
+    <title>work | Arian Nazarian</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <script src="main-site.js" defer></script>
-<script src="time-travel.js"></script>
 <body>
     <header>
         <picture id="header-image" role="button" aria-label="Toggle header image">
