--- a/personal.html
+++ b/personal.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Photos | Arian Nazarian</title>
+    <title>personal | Arian Nazarian</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <script src="main-site.js" defer></script>
