--- a/work.html
+++ b/work.html
@@ -24,5 +24,8 @@
     <main>
         <p class="category-quote">"It's the job that's never started as takes longest to finish."<br>- J.R.R. Tolkien, <em>The Lord of the Rings</em></p>
     </main>
+    <footer>
+        <p>&copy; 2025 Arian Nazarian | <a href="#top" class="clickable">Top ▲</a></p>
+    </footer>    
 </body>
 </html>
