Moved eternal watch to work page

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
             <label for="popup-reset" class="close-button">close</label>
         </div>
-
+        <p class="category-quote">"It's the job that's never started as takes longest to finish."<br>- J.R.R. Tolkien, <em>The Lord of the Rings</em></p>
     </main>
 
     <footer>
