--- a/work.html
+++ b/work.html
@@ -11,9 +11,9 @@
 <body>
     <header>
         <picture id="header-image" role="button" aria-label="Toggle header image">
-            <source id="header-source" srcset="assets/images/no-admittance.webp" type="image/webp">
-            <img id="header-img" src="assets/images/no-admittance.png" 
-                 alt="No Admittance Except on Party Business" 
+            <source id="header-source" srcset="assets/images/lumondesk.webp" type="image/webp">
+            <img id="header-img" src="assets/images/lumondesk.png" 
+                 alt="Lumon employee desk from television series Severance" 
                  class="header-image" loading="lazy" tabindex="0">
         </picture>
         <nav>
