Changed work page header photos

--- a/personal.html
+++ b/personal.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <script src="main-site.js" defer></script>
-<body>
+<body class="personal-page">
     <header>
         <picture id="header-image" role="button" aria-label="Toggle header image">
             <source id="header-source" srcset="assets/images/no-admittance.webp" type="image/webp">
