--- a/work.html
+++ b/work.html
@@ -8,7 +8,7 @@
 </head>
 <script src="main-site.js" defer></script>
 <script src="time-travel.js" defer></script>
-<body>
+<body class="work-page">
     <header>
         <picture id="header-image" role="button" aria-label="Toggle header image">
             <source id="header-source" srcset="assets/images/lumondesk.webp" type="image/webp">
