Changed personal page header photos

--- a/personal.html
+++ b/personal.html
@@ -10,9 +10,9 @@
 <body class="personal-page">
     <header>
         <picture id="header-image" role="button" aria-label="Toggle header image">
-            <source id="header-source" srcset="assets/images/no-admittance.webp" type="image/webp">
-            <img id="header-img" src="assets/images/no-admittance.png" 
-                 alt="No Admittance Except on Party Business" 
+            <source id="header-source" srcset="assets/images/riskybusiness.webp" type="image/webp">
+            <img id="header-img" src="assets/images/riskybusiness.png" 
+                 alt="Tom Cruise in the 1983 film Risky Business holding a turkey leg" 
                  class="header-image" loading="lazy" tabindex="0">
         </picture>
         <nav>
