--- a/personal.html
+++ b/personal.html
@@ -36,7 +36,7 @@
 
         .video-title {
             font-size: 16px;
-            font-weight: normal;
+            font-weight: bold;
             color: white; /* Adjust if needed */
             margin-bottom: 5px;
     }
