Embedding youtube video on personal page

--- a/personal.html
+++ b/personal.html
@@ -50,9 +50,10 @@
                 width: 100%; /* Makes the iframe responsive */
                 height: auto;
                 aspect-ratio: 16 / 9; /* Keeps video aspect ratio */
+                display: block;
             }
         
-            @media (max-width: 1870px) {
+            @media (max-width: 1970px) {
                 .video-container {
                     width: 80%; /* Expands to 80% width on mobile */
                 }
