Embedding youtube video on personal page

--- a/personal.html
+++ b/personal.html
@@ -49,57 +49,58 @@
     
         <script>
             document.addEventListener("DOMContentLoaded", function () {
-            // Store the original HTML content of each video thumbnail when the page loads
-            document.querySelectorAll('.video-thumbnail').forEach(vid => {
-                vid.dataset.originalContent = vid.innerHTML;
-            });
-        });
+    // Store the original HTML content of each video thumbnail when the page loads
+    document.querySelectorAll('.video-thumbnail').forEach(vid => {
+        vid.dataset.originalContent = vid.innerHTML;
+    });
+});
 
-            function loadVideo(el, videoId) {
-                // Stop all other playing videos before loading a new one
-                document.querySelectorAll('.video-thumbnail').forEach(vid => {
-                    if (vid !== el && vid.dataset.originalContent) {
-                        vid.innerHTML = vid.dataset.originalContent; // Restore original thumbnail
-                    }
-                });
+function loadVideo(el, videoId) {
+    // Stop all other playing videos before loading a new one
+    document.querySelectorAll('.video-thumbnail').forEach(vid => {
+        if (vid !== el && vid.dataset.originalContent) {
+            vid.innerHTML = vid.dataset.originalContent; // Restore original thumbnail
+        }
+    });
 
-                // Ensure the clicked element stores its original content
-                if (!el.dataset.originalContent) {
-                    el.dataset.originalContent = el.innerHTML;
-                }
+    // Ensure the clicked element stores its original content
+    if (!el.dataset.originalContent) {
+        el.dataset.originalContent = el.innerHTML;
+    }
 
-                // Set the width of the iframe to match the original thumbnail width
-                const width = el.offsetWidth;
+    // Set the width of the iframe to match the original thumbnail width
+    const width = el.offsetWidth;
 
-                // Replace thumbnail with iframe (keeping the same width)
-                el.innerHTML = `<iframe class="video-iframe" loading="lazy" width="${width}" height="${width * 9 / 16}" 
-                                src="https://www.youtube.com/embed/${videoId}?autoplay=1&modestbranding=1&rel=0"
-                                frameborder="0" allow="autoplay; encrypted-media; gyroscope; picture-in-picture" 
-                                allowfullscreen></iframe>`;
-            }
+    // Replace thumbnail with iframe (keeping the same width)
+    el.innerHTML = `<iframe class="video-iframe" loading="lazy" width="${width}" height="${width * 9 / 16}" 
+                    src="https://www.youtube.com/embed/${videoId}?autoplay=1&modestbranding=1&rel=0"
+                    frameborder="0" allow="autoplay; encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen></iframe>`;
+}
 
-            function toggleVideo(index) {
-                const videos = document.querySelectorAll('.video-container');
-                const arrows = document.querySelectorAll('.toggle-arrow');
+function toggleVideo(index) {
+    const videos = document.querySelectorAll('.video-container');
+    const arrows = document.querySelectorAll('.toggle-arrow');
 
-                if (videos[index].style.display === "none" || videos[index].style.display === "") {
-                    videos[index].style.display = "block";
-                    arrows[index].textContent = "▲"; // Change arrow to up
-                } else {
-                    videos[index].style.display = "none";
-                    arrows[index].textContent = "▼"; // Change arrow to down
+    if (videos[index].style.display === "none" || videos[index].style.display === "") {
+        videos[index].style.display = "block";
+        arrows[index].textContent = "▲"; // Change arrow to up
+    } else {
+        videos[index].style.display = "none";
+        arrows[index].textContent = "▼"; // Change arrow to down
 
-                    // Find and pause the video inside the container
-                    const iframe = videos[index].querySelector("iframe");
-                    if (iframe) {
-                        iframe.src = iframe.src; // Reloading iframe stops the video
-                    }
-                }
+        // Find and pause the video inside the container
+        const iframe = videos[index].querySelector("iframe");
+        if (iframe) {
+            iframe.src = ""; // Reset the iframe's src to stop the video
+        }
+    }
 
-                // Stop blinking after first click
-                arrows[index].classList.remove("blink-arrow");
-                arrows[index].style.animation = "none"; // Ensures blinking stops completely
-            }
+    // Stop blinking after first click
+    arrows[index].classList.remove("blink-arrow");
+    arrows[index].style.animation = "none"; // Ensures blinking stops completely
+}
+
 
         </script>
     
