Embedding youtube video on personal page

--- a/personal.html
+++ b/personal.html
@@ -48,7 +48,7 @@
         </div>
     
         <script>
-            document.addEventListener("DOMContentLoaded", function () {
+           document.addEventListener("DOMContentLoaded", function () {
     // Store the original HTML content of each video thumbnail when the page loads
     document.querySelectorAll('.video-thumbnail').forEach(vid => {
         vid.dataset.originalContent = vid.innerHTML;
@@ -68,12 +68,15 @@ function loadVideo(el, videoId) {
         el.dataset.originalContent = el.innerHTML;
     }
 
+    // Store the video ID for future toggles
+    el.dataset.videoId = videoId;
+
     // Set the width of the iframe to match the original thumbnail width
     const width = el.offsetWidth;
 
     // Replace thumbnail with iframe (keeping the same width)
     el.innerHTML = `<iframe class="video-iframe" loading="lazy" width="${width}" height="${width * 9 / 16}" 
-                    src="https://www.youtube.com/embed/${videoId}?autoplay=1&modestbranding=1&rel=0"
+                    src="https://www.youtube.com/embed/${videoId}?modestbranding=1&rel=0"
                     frameborder="0" allow="autoplay; encrypted-media; gyroscope; picture-in-picture" 
                     allowfullscreen></iframe>`;
 }
@@ -81,10 +84,16 @@ function loadVideo(el, videoId) {
 function toggleVideo(index) {
     const videos = document.querySelectorAll('.video-container');
     const arrows = document.querySelectorAll('.toggle-arrow');
+    const videoThumbnail = videos[index].querySelector(".video-thumbnail");
 
     if (videos[index].style.display === "none" || videos[index].style.display === "") {
         videos[index].style.display = "block";
         arrows[index].textContent = "▲"; // Change arrow to up
+
+        // If the video was previously played and removed, reload its original thumbnail (but NOT autoplay)
+        if (videoThumbnail.dataset.videoId) {
+            loadVideo(videoThumbnail, videoThumbnail.dataset.videoId);
+        }
     } else {
         videos[index].style.display = "none";
         arrows[index].textContent = "▼"; // Change arrow to down
