--- a/personal.html
+++ b/personal.html
@@ -113,112 +113,88 @@ function toggleVideo(index) {
 
         </script>
     
-        <style>
-            .video-wrapper {
-    text-align: center;
-}
+    <style>
+        .video-wrapper {
+            text-align: center;
+        }
 
-.video-title {
-    font-size: 16px;
-    font-weight: bold;
-    color: white;
-    margin-bottom: 5px;
-    cursor: pointer; /* Make title clickable */
-    transition: opacity 0.3s ease, text-shadow 0.3s ease;
-}
+        .video-title {
+            font-size: 16px;
+            font-weight: bold;
+            color: white;
+            margin-bottom: 5px;
+            cursor: pointer; /* Make title clickable */
+            transition: opacity 0.3s ease, text-shadow 0.3s ease;
+        }
 
-/* Hover effect for video titles (matching Eternal Watch style) */
-.video-title:hover {
-    text-shadow: 2px 2px 6px rgba(255, 255, 255, 0.3);
-}
+        /* Hover effect for video titles (matching Eternal Watch style) */
+        .video-title:hover {
+            text-shadow: 2px 2px 6px rgba(255, 255, 255, 0.3);
+        }
 
-/* Video containers start hidden */
-.video-container {
-    display: none;
-    aspect-ratio: 16 / 9;
-    margin-bottom: 2px; /* Further reduced space below videos */
-}
+        /* Video containers start hidden */
+        .video-container {
+            display: none;
+        }
 
-/* Further reduced space below thumbnails */
-.video-thumbnail {
-    position: relative;
-    width: 50%;
-    max-width: 800px;
-    margin: 5px auto 2px auto; /* Less space below */
-    cursor: pointer;
-    aspect-ratio: 16 / 9;
-}
+        .video-thumbnail {
+            position: relative;
+            width: 50%;
+            max-width: 800px;
+            margin: 10px auto;
+            cursor: pointer;
+            aspect-ratio: 16 / 9;
+        }
 
-.video-thumbnail img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    display: block;
-}
+        .video-thumbnail img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: block;
+        }
 
-/* 🔹 Optimized Play Button (Increased Size on Desktop) */
-.play-button {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background: black;
-    width: 18%; /* Increased from 14% to make it larger */
-    height: 18%; /* Increased height for better proportions */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 2px;
-    transition: transform 0.2s ease-in-out, background 0.2s ease-in-out;
-}
+        /* Rectangle Play Button */
+        .play-button {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: rgb(0, 0, 0);
+            color: white;
+            font-size: 32px;
+            padding: 8px 16px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-family: Arial, sans-serif;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+        }
 
-/* 🔹 Larger White Triangle Inside the Play Button (Desktop) */
-.play-button::before {
-    content: "";
-    display: block;
-    width: 0;
-    height: 0;
-    border-left: 60% solid white; /* Increased from 50% */
-    border-top: 30% solid transparent;
-    border-bottom: 30% solid transparent;
-}
+        /* Blinking Down/Up Arrow (Matching Eternal Watch) */
+        .toggle-arrow {
+            display: inline-block;
+            animation: blink 1s infinite alternate;
+            margin-left: 5px;
+        }
 
-/* 🔹 Adjust Play Button for Mobile Screens */
-@media (max-width: 768px) {
-    .video-thumbnail {
-        width: 80%;
-    }
+        @keyframes blink {
+            0% { opacity: 1; }
+            100% { opacity: 0.3; }
+        }
 
-    .play-button {
-        width: 20%; /* Larger on mobile */
-        height: 20%;
-    }
+        /* Hover Effect for Play Button */
+        .play-button:hover {
+            background: rgba(0, 0, 0, 0.9);
+            transform: translate(-50%, -50%) scale(1.1);
+        }
 
-    .play-button::before {
-        border-left-width: 65%;
-        border-top-width: 32%;
-        border-bottom-width: 32%;
-    }
-}
-
-/* 🔹 Play Button Hover Effect */
-.play-button:hover {
-    background: rgba(255, 255, 255, 0.2);
-    transform: translate(-50%, -50%) scale(1.1);
-}
-
-/* 🔹 Blinking Down/Up Arrow (Matching Eternal Watch) */
-.toggle-arrow {
-    display: inline-block;
-    animation: blink 1s infinite alternate;
-    margin-left: 5px;
-}
-
-@keyframes blink {
-    0% { opacity: 1; }
-    100% { opacity: 0.3; }
-}
-        </style>
+        /* Responsive Sizing */
+        @media (max-width: 768px) {
+            .video-thumbnail {
+                width: 80%;
+            }
+        }
+    </style>
     </main>    
     <footer>
         <p>&copy; 2025 Arian Nazarian | <a href="#top" class="clickable">Top ▲</a></p>
