--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
     
     <!-- Preload key assets for performance -->
     <link rel="preload" as="image" href="assets/images/no-admittance.webp">
-    <link rel="preload" as="image" href="assets/images/no-admittance.png">
 
     <!-- Favicons -->
-    <link rel="icon" type="image/png" href="assets/icons/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="assets/icons/favicon.svg" />
     <link rel="shortcut icon" href="assets/icons/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-touch-icon.png" />
@@ -27,8 +25,7 @@
     <div id="top"></div>
     <header>
         <picture id="header-image" role="button" aria-label="Toggle header image">
-            <source id="header-source" srcset="assets/images/no-admittance.webp" type="image/webp">
-            <img id="header-img" src="assets/images/no-admittance.png" 
+            <img id="header-img" src="assets/images/no-admittance.webp" 
                  alt="No Admittance Except on Party Business" 
                  class="header-image" loading="lazy" tabindex="0">
         </picture>
