--- a/personal.html
+++ b/personal.html
@@ -9,12 +9,9 @@
 <script src="main-site.js" defer></script>
 <body class="personal-page">
     <header>
-        <picture id="header-image" role="button" aria-label="Toggle header image">
-            <source id="header-source" srcset="assets/images/riskybusiness.webp" type="image/webp">
-            <img id="header-img" src="assets/images/riskybusiness.png" 
-                 alt="Tom Cruise in the 1983 film Risky Business holding a turkey leg" 
-                 class="header-image" loading="lazy" tabindex="0">
-        </picture>
+        <img id="header-img" src="assets/images/riskybusiness.webp" 
+             alt="Tom Cruise in the 1983 film Risky Business holding a turkey leg" 
+             class="header-image" loading="lazy" tabindex="0">
         <nav>
             <a href="index.html"><span class="back-arrow">&lt;</span> personal</a>
         </nav>
@@ -109,8 +106,6 @@ function toggleVideo(index) {
     arrows[index].classList.remove("blink-arrow");
     arrows[index].style.animation = "none"; // Ensures blinking stops completely
 }
-
-
         </script>
     
     <style>
