--- a/work.html
+++ b/work.html
@@ -10,16 +10,14 @@
 <script src="time-travel.js" defer></script>
 <body class="work-page">
     <header>
-        <picture id="header-image" role="button" aria-label="Toggle header image">
-            <source id="header-source" srcset="assets/images/lumondesk.webp" type="image/webp">
-            <img id="header-img" src="assets/images/lumondesk.png" 
-                 alt="Lumon employee desk from television series Severance" 
-                 class="header-image" loading="lazy" tabindex="0">
-        </picture>
+        <img id="header-img" src="assets/images/lumondesk.webp" 
+             alt="Lumon employee desk from television series Severance" 
+             class="header-image" loading="lazy" tabindex="0">
         <nav>
             <a href="index.html"><span class="back-arrow">&lt;</span> work</a>
         </nav>        
     </header>
+    
     <!-- Audio Element -->
     <audio id="eternal-audio" loop>
         <source src="assets/audio/timepiece.mp3" type="audio/mpeg">
