--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <header>
         <picture id="header-image" role="button" aria-label="Toggle header image">
             <img id="header-img" src="assets/images/no-admittance.webp" 
-                 alt="No Admittance Except on Party Business" 
-                 class="header-image" loading="lazy" tabindex="0">
+                alt="No Admittance Except on Party Business" 
+                class="header-image" loading="eager" fetchpriority="high">
         </picture>
     
         <!-- Email Address in Header -->
