--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
         <input type="radio" id="popup-edu" name="popup-group" class="popup-radio">
     
         <!-- Pop-ups -->
-        <div class="popup" id="popup-ariann-box" role="dialog" aria-labelledby="popup-ariann-title" aria-hidden="true">
-            <h2 id="popup-ariann-title">About Me</h2>
+        <div class="popup" id="popup-ariann-box" role="dialog" aria-label="About Me Popup" aria-hidden="true">
             <p>Hello, I'm Arian! Let's explore the "<em>curious and curiouser</em>" together.</p>
             <label for="popup-reset" class="close-button">close</label>
         </div>
