--- a/work.html
+++ b/work.html
@@ -5,14 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>work | Arian Nazarian</title>
     <link rel="stylesheet" href="style.css">
+
+    <!-- JavaScript (Moved Here for Better Page Load Performance) -->
+    <script src="main-site.js" defer></script>
+    <script src="time-travel.js" defer></script>
 </head>
-<script src="main-site.js" defer></script>
-<script src="time-travel.js" defer></script>
 <body class="work-page">
     <header>
         <img id="header-img" src="assets/images/lumondesk.webp" 
              alt="Lumon employee desk from television series Severance" 
-             class="header-image" loading="lazy" tabindex="0">
+             class="header-image" loading="eager" fetchpriority="high" tabindex="0">
         <nav>
             <a href="index.html"><span class="back-arrow">&lt;</span> work</a>
         </nav>        
@@ -25,7 +27,7 @@
 
     <!-- The Eternal Watch Section -->
     <section id="eternal-watch">
-        <h2 id="eternal-title" class="clickable" role="button">
+        <h2 id="eternal-title" class="clickable" role="button" aria-expanded="false">
             The Eternal Watch <span id="eternal-arrow" class="blink-arrow">▼</span>
         </h2>
         <h2 id="current-time" class="clickable" role="button"></h2>
