Added image to ARIANN pop-up

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
         
             <!-- Pop-ups -->
             <div class="popup" id="popup-ariann-box" role="dialog" aria-label="Welcome message from Arian" aria-hidden="true">
+                <img src="assets/images/arian-mahnaz.webp" 
+                     alt="Arian and Mahnaz together" class="popup-image" loading="lazy">
                 <p>Hello, I'm Arian! Let's explore the "<em>curious and curiouser</em>" together.</p>
                 <label for="popup-reset" class="close-button">close</label>
             </div>
