--- a/personal.html
+++ b/personal.html
@@ -7,7 +7,7 @@
     <title>personal | Arian Nazarian</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<script src="main-site.js" defer></script>
+<script src="main-site.js" defer async></script>
 <body class="personal-page">
     <header>
         <img id="header-img" src="assets/images/riskybusiness.webp"
@@ -28,7 +28,7 @@
             </p>
             <div class="video-container">
                 <div class="video-thumbnail" data-video-id="sC6eCwCiWEw" role="button" aria-label="Play In a Lil Pickle">
-                    <img src="https://img.youtube.com/vi/sC6eCwCiWEw/hqdefault.jpg" alt="In a Lil Pickle short film thumbnail.">
+                    <img src="https://img.youtube.com/vi/sC6eCwCiWEw/hqdefault.jpg" alt="In a Lil Pickle short film thumbnail." loading="lazy">
                     <div class="play-button">▶</div>
                 </div>
             </div>
@@ -41,7 +41,7 @@
             </p>
             <div class="video-container">
                 <div class="video-thumbnail" data-video-id="0yFkQ1g7qp4" role="button" aria-label="Play Free Pizza">
-                    <img src="https://img.youtube.com/vi/0yFkQ1g7qp4/hqdefault.jpg" alt="Free Pizza short film thumbnail.">
+                    <img src="https://img.youtube.com/vi/0yFkQ1g7qp4/hqdefault.jpg" alt="Free Pizza short film thumbnail." loading="lazy">
                     <div class="play-button">▶</div>
                 </div>
             </div>
