--- a/work.html
+++ b/work.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css">
 
     <!-- JavaScript (Moved Here for Better Page Load Performance) -->
-    <script src="main-site.js" defer></script>
-    <script src="time-travel.js" defer></script>
+    <script src="main-site.js" defer async></script>
+    <script src="time-travel.js" defer async></script>
 </head>
 <body class="work-page">
     <header>
