--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="manifest" href="assets/icons/site.webmanifest" />
 
        <!-- Async load JavaScript for performance -->
-       <script src="main-site.js" defer async></script>
+    <script src="main-site.js" defer></script>
     </head>
     <body>
         <div id="top"></div>
@@ -88,4 +88,3 @@
         </footer>    
     </body>
     </html>
-    
