--- a/personal.html
+++ b/personal.html
@@ -7,7 +7,7 @@
     <title>personal | Arian Nazarian</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<script src="main-site.js" defer async></script>
+<script src="main-site.js" defer></script>
 <body class="personal-page">
     <header>
         <img id="header-img" src="assets/images/riskybusiness.webp"
