--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
        <!-- Async load JavaScript for performance -->
     <script src="main-site.js" defer></script>
     </head>
-    <body>
+    <body class:="index-page">
+
         <div id="top"></div>
         <header>
             <picture id="header-image" role="button" aria-label="Toggle header image">
