--- a/work.html
+++ b/work.html
@@ -73,8 +73,14 @@
         <!-- The singular pop-up for all matching years -->
         <input type="radio" id="popup-years" name="year-popup-group" class="popup-radio">
         <div class="popup" id="popup-years-box" role="dialog" aria-label="Historical details" aria-hidden="true">
-            <p><strong>Historical details:</strong></p>
-            <p>Some interesting historical context related to this date.</p>
+            <p><strong>London 1880s-Present</strong></p>
+            <!-- Lazy-loaded looping animation -->
+            <video id="popup-video" class="hidden" loop autoplay muted playsinline>
+                <source data-src="assets/images/london-time.webm" type="video/webm">
+                Your browser does not support the video tag.
+            </video>
+            <p>Maybe AI isn't so bad after all.</p>
+
             <label for="popup-reset" class="close-button">close</label>
         </div>
 
