--- a/work.html
+++ b/work.html
@@ -72,11 +72,11 @@
 
         <!-- The singular pop-up for all matching years -->
         <input type="radio" id="popup-years" name="year-popup-group" class="popup-radio">
-        <div class="popup" id="popup-years-box" role="dialog" aria-label="Historical details" aria-hidden="true">
+        <div class="popup" id="popup-years-box" role="dialog" aria-label="Snippets of London from the 1880s to present day" aria-hidden="true">
             <p><strong>London 1880s-Present</strong></p>
             <!-- Lazy-loaded looping animation -->
             <video id="popup-video" class="hidden" loop autoplay muted playsinline>
-                <source data-src="assets/images/london-time.webm" type="video/webm">
+                <source data-src="assets/images/london-time.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <p>Maybe AI isn't so bad after all.</p>
