--- a/work.html
+++ b/work.html
@@ -79,7 +79,7 @@
                 <source src="assets/images/london-time.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
-            <p>Maybe AI isn't so bad after all.</p>
+            <p>Maybe AI isn't so bad after all!</p>
             <label for="popup-reset" class="close-button">close</label>
         </div>
 
