--- a/work.html
+++ b/work.html
@@ -73,13 +73,13 @@
         <!-- The singular pop-up for all matching years -->
         <input type="radio" id="popup-years" name="year-popup-group" class="popup-radio">
         <div class="popup" id="popup-years-box" role="dialog" aria-label="Snippets of London from the 1880s to present day" aria-hidden="true">
-            <p><strong>London 1880s-Present</strong></p>
+            <p><strong>London, Timeless: 1880s-Present</strong></p>
             <!-- Directly set the source -->
             <video id="popup-video" loop autoplay muted playsinline>
                 <source src="assets/images/london-time.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
-            <p>Maybe AI isn't so bad after all!</p>
+            <p>"Time flies, the sun will rise… and the taxman never dies.</p>
             <label for="popup-reset" class="close-button">close</label>
         </div>
 
