--- a/work.html
+++ b/work.html
@@ -79,7 +79,7 @@
                 <source src="assets/images/london-time.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
-            <p>"Time flies, the sun will rise… and the taxman never dies.</p>
+            <p>Time flies, the sun will rise… and the taxman never dies.</p>
             <label for="popup-reset" class="close-button">close</label>
         </div>
 
